--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "css-loader": "^6.7.1",
+    "formik": "^2.2.9",
     "generate-component-react": "^1.0.2",
     "generate-react-cli": "^7.1.0",
+    "path": "^0.12.7",
+    "prettier": "^2.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "style-loader": "^3.3.1"
   }
 }
